# project_2-kirnosov-m25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/: decorators.py
src/primitive_db/: core.py  engine.py  main.py  utils.py
