[project]
name = "project_2-kirnosov-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Kirnosov",email = "kirnosov.eg@yandex.ru"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "primitive_db", from = "src" }
]

[tool.poetry.scripts]
project = "src.primitive_db.main:main" 