[project]
name = "project_2-kirnosov-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Kirnosov",email = "kirnosov.eg@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)",
    "prettytable (>=3.17.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "primitive_db", from = "src" }
]

[tool.poetry.scripts]
project = "primitive_db.main:main" 

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 
[dependency-groups]
dev = [
    "ruff (>=0.14.8,<0.15.0)"
]
